--- a/Competency.html
+++ b/Competency.html
@@ -22,15 +22,17 @@
             text-align: center;
             color: #0056b3;
             font-size: 2rem;
-            margin-bottom: 10px;
+            margin-top: 5px;
+            margin-bottom: 5px;
         }
 
         #question-title {
             text-align: center;
-            color: #0056b3;
-            font-size: 0.8rem;
-            margin-bottom: 20px;
-            color: #333;
+            color: red;
+            font-size: 1 rem;
+            margin-top: 5px;
+            margin-bottom: 5px;
+            
         }
 
         #content-container {
