--- a/Competency.html
+++ b/Competency.html
@@ -21,7 +21,7 @@
         h2 {
             text-align: center;
             color: #0056b3;
-            font-size: 2rem;
+            font-size: 1.5rem;
             margin-top: 5px;
             margin-bottom: 5px;
         }
@@ -130,7 +130,7 @@
 <body>
     <div id="content-container">
         <h2>高中物理素養題</h2>
-        <h3 id="question-title">請依序題目的空格從下方點選答案填入空格</h3>
+        <h3 id="question-title">請依序從下方點選答案填入題目空格</h3>
 
         <div id="question-content">
             <div id="passage">
