--- a/physics.html
+++ b/physics.html
@@ -514,9 +514,12 @@
     </article>
 
     <aside>
-      <h3 class="sub-title">類別</h3>
+      <h3 class="sub-title">學習資源</h3>
       <ul class="sub-menu">
          <li><a href="physics.html">課程檔案</a></li>
+         <li><a href="https://drive.google.com/drive/folders/1CLp5TplsPyamIveePaoE0OGeD8pcKYU0?usp=sharing">高三複習卷</a></li>
+         <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
+         <li><a href="https://adl.edu.tw/HomePage/home/">因材網</a></li>
         
       </ul>
 
