--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
+         <li><a href="https://docs.google.com/presentation/d/1koEAs6LXxW0se6GtcbmGS7bvwwWKikeY/edit?usp=sharing&ouid=111752737259214705462&rtpof=true&sd=true">桃源觀新(一)</a></li>
         
        
       </ul>
