--- a/Competency.html
+++ b/Competency.html
@@ -166,6 +166,8 @@
             <p id="answer-explanation"></p>
         </div>
         <button id="next-question" onclick="nextQuestion()">下一題</button>
+        <div style="display:none;">
+<img src="https://hitwebcounter.com/counter/counter.php?page=8081074&style=0003&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" style="float: center;" /></a>  </div>
     </div>
 
     <script>
