--- a/exp.html
+++ b/exp.html
@@ -2,8 +2,8 @@
 <html lang="zh-Hant-TW">
 <head>
   <meta charset="utf-8">
-   <title>科學實驗</title>
-   <meta name="description" content="提供物理與程式學習的教學與心得">
+   <title>探究與實作</title>
+   <meta name="description" content="科學實驗、探究與實作">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
