--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
                   <a href="physics.html">物理課程</a>
+                  <a href="physics.html">探究與實作</a>
                   <a href="WebDesign.html">網頁設計</a>
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
@@ -266,7 +267,7 @@
       <ul class="sub-menu">
          <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
-         <li><a href="exp.html">科學實驗</a></li>
+         <li><a href="exp.html">探究與實作</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
          <li><a href="https://docs.google.com/presentation/d/1koEAs6LXxW0se6GtcbmGS7bvwwWKikeY/edit?usp=sharing&ouid=111752737259214705462&rtpof=true&sd=true">桃源觀新(一)</a></li>
         
