--- a/LineBot_lesson4.html
+++ b/LineBot_lesson4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
    <title>LineBot第四堂課</title>
-   <meta name="description" content="提供物理與程式學習的教學與心得">
+   <meta name="description" content="LineBot學習、聊天機器人">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
