--- a/Competency.html
+++ b/Competency.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="透過物理題目的練習建立高中物理的概念">
+    <meta name="description" content="透過物理題目的練習建立高中物理的概念並做物理學測複習">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>高中物理素養題</title>
     <style>
