--- a/Competency.html
+++ b/Competency.html
@@ -5,15 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="透過物理題目的練習建立高中物理的概念並做物理學測複習">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
-    <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
-
-     gtag('config', 'G-LQRF00LJWJ');
-    </script>
+    <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
     <title>高中物理素養題</title>
     <style>
       
