--- a/Competency.html
+++ b/Competency.html
@@ -142,6 +142,25 @@
         #next-question {
             display: none;
         }
+
+#question-picture {
+    display: flex;
+    justify-content: center;  /* 水平置中 */
+    align-items: center;  /* 垂直置中 */
+}
+
+#question-picture img {
+    display: block;
+    margin: 0 auto;
+    width: 100%; /* 預設在小螢幕上圖片寬度為100% */
+    height: auto; /* 保持圖片的高度自動調整 */
+}
+
+@media (min-width: 768px) {
+    #question-picture img {
+        width: 50%; /* 在螢幕寬度大於768px時，圖片寬度變為50% */
+    }
+}
     </style>
 </head>
 <body>
@@ -150,7 +169,7 @@
         <h3 id="question-title">題目載入中…請稍後</h3>
 
         <div id="question-content">
-            <div id="question-picture">
+            <div id="question-picture" style="text-align: center;">
             </div>
             <div id="passage">
             </div>
@@ -174,7 +193,7 @@
     <script>
 let selectedDropzone = null;
 let allQuestionData = null;
-let questionNumber = 1;
+let questionNumber = 18;
 
 // 從google sheet獲取資料
 fetch("https://script.google.com/macros/s/AKfycbx4b1cKdaXT5Yer-k3yWQHis70ebz33ryPDZR7D6bTP8e4Kon5sKMSrcRYzSDC7ySMSew/exec")
