--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
                   <a href="physics.html">物理課程</a>
-                  <a href="physics.html">探究與實作</a>
+                  <a href="exp.html">探究與實作</a>
                   <a href="WebDesign.html">網頁設計</a>
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
