--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     src="https://www.canva.com/design/DAGQmXBztec/ceJjkKo4J90UWA5uwwaHUg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+<a href="https://docs.google.com/document/d/1vWicCbZy5Ay53ipH_MSQCZlJycL8XwOoOHhhBQG-2KA/edit?usp=sharing">提詞參考</a>
      
 <br>
       
