--- a/Competency.html
+++ b/Competency.html
@@ -229,6 +229,7 @@
     <div id="content-container">
         <h2>高中物理素養題</h2>
         <div id="level-selection">
+            <button class="level-button" onclick="selectLevel(因次')">因次</button>
             <button class="level-button" onclick="selectLevel('111年學測')">111年學測</button>
             <button class="level-button" onclick="selectLevel('112年學測')">112年學測</button>
             <button class="level-button" onclick="selectLevel('113年學測')">113年學測</button>
