--- a/Competency.html
+++ b/Competency.html
@@ -168,7 +168,7 @@
             }
         }
 
-        /* 新增的關卡選擇樣式，類似於 Duolingo 的關卡效果，偏藍色系 */
+        /* 新增的關卡選擇樣式，質感藍色系 */
         #level-selection {
             display: flex;
             justify-content: center;
@@ -181,7 +181,7 @@
             position: relative;
             width: 140px;
             height: 140px;
-            background: linear-gradient(145deg, #42a5f5, #64b5f6);
+            background: linear-gradient(145deg, #3a79c4, #5a95de);
             color: #ffffff;
             border: none;
             border-radius: 50%;
@@ -190,21 +190,21 @@
             padding: 10px;
             cursor: pointer;
             transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
-            box-shadow: 0 6px 15px rgba(66, 165, 245, 0.4);
+            box-shadow: 0 6px 15px rgba(58, 121, 196, 0.4);
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
         .level-button:hover {
-            background: linear-gradient(145deg, #1e88e5, #42a5f5);
+            background: linear-gradient(145deg, #3369b3, #4e87d4);
             transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(66, 165, 245, 0.6);
+            box-shadow: 0 10px 20px rgba(58, 121, 196, 0.6);
         }
 
         .level-button:active {
             transform: translateY(0);
-            box-shadow: 0 6px 15px rgba(66, 165, 245, 0.4);
+            box-shadow: 0 6px 15px rgba(58, 121, 196, 0.4);
         }
 
         .level-button span {
